<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_members"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_member_management" />
        <item
            android:id="@+id/nav_trainers"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_trainer_management" />
        <item
            android:id="@+id/nav_salary"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_salary_management" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@android:drawable/ic_menu_report_image"
            android:title="@string/menu_reports" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
